IALERT-3878: Fix compiler issues with the changes.