@@ -37,7 +37,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
         List<NotificationEntity> notifications = findAll().stream()
             .sorted(Comparator.comparing(NotificationEntity::getCreatedAt))
             .filter(withinRange)
-            .collect(Collectors.toList());
+            .toList();
         int pageSize = pageable.getPageSize();
         int pageNumber = pageable.getPageNumber();
         List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
@@ -53,7 +53,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
     public List<NotificationEntity> findByCreatedAtBefore(final OffsetDateTime date) {
         return findAll().stream()
             .filter(entity -> entity.getCreatedAt().isBefore(date))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -77,7 +77,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
         List<NotificationEntity> notifications = findAll().stream()
             .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
             .filter(processedFalse)
-            .collect(Collectors.toList());
+            .toList();
         int pageSize = pageable.getPageSize();
         int pageNumber = pageable.getPageNumber();
         List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
@@ -97,7 +97,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
             .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
             .filter(providerConfigIdEqual)
             .filter(processedFalse)
-            .collect(Collectors.toList());
+            .toList();
         int pageSize = pageable.getPageSize();
         int pageNumber = pageable.getPageNumber();
         List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
@@ -113,7 +113,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
     public List<NotificationEntity> findAllByIdInOrderByProviderCreationTimeAsc(final List<Long> notificationIds) {
         return findAllById(notificationIds).stream()
             .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
@@ -126,7 +126,7 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
     public int bulkDeleteCreatedAtBefore(OffsetDateTime date) {
         List<Long> notificationsToDelete = findByCreatedAtBefore(date).stream()
             .map(NotificationEntity::getId)
-            .collect(Collectors.toList());
+            .toList();
         deleteAllById(notificationsToDelete);
         return notificationsToDelete.size();
     }
@@ -171,5 +171,41 @@ public class MockNotificationContentRepository extends MockRepositoryContainer<L
             .stream()
             .filter(providerEqual.and(notificationTypeEqual))
             .count();
+    }
+
+    @Override
+    public Page<NotificationEntity> findByProviderConfigIdAndMappingToJobsFalseOrderByProviderCreationTimeAsc(long providerConfigId, Pageable pageable) {
+        Predicate<NotificationEntity> mappingFalse = Predicate.not(NotificationEntity::isMappingToJobs);
+        Predicate<NotificationEntity> providerConfigIdEqual = notificationEntity -> notificationEntity.getProviderConfigId().equals(providerConfigId);
+        List<NotificationEntity> notifications = findAll().stream()
+                .sorted(Comparator.comparing(NotificationEntity::getProviderCreationTime))
+                .filter(providerConfigIdEqual)
+                .filter(mappingFalse)
+                .toList();
+        int pageSize = pageable.getPageSize();
+        int pageNumber = pageable.getPageNumber();
+        List<List<NotificationEntity>> partitionedLists = ListUtils.partition(notifications, pageSize);
+        int totalPages = partitionedLists.size();
+        if (partitionedLists.size() >= pageNumber) {
+            return new PageImpl<>(partitionedLists.get(pageNumber), pageable, totalPages);
+        } else {
+            return new PageImpl<>(List.of());
+        }
+    }
+
+    @Override
+    public boolean existsByProviderConfigIdAndMappingToJobsFalse(long providerConfigId) {
+        Predicate<NotificationEntity> providerConfigIdEqual = notificationEntity -> notificationEntity.getProviderConfigId().equals(providerConfigId);
+        Predicate<NotificationEntity> notMapped = Predicate.not(NotificationEntity::isMappingToJobs);
+        Predicate<NotificationEntity> providerAndMappingToJobsFalse = providerConfigIdEqual.and(notMapped);
+        return findAll()
+                .stream()
+                .anyMatch(providerAndMappingToJobsFalse);
+    }
+
+    @Override
+    public void setMappingToJobsByIds(Set<Long> notificationIds) {
+        findAllById(notificationIds)
+                .forEach(NotificationEntity::setMappingToJobsToTrue);
     }
 }
